# wagtail-localize-git

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  testmanage.py  tox.ini
.circleci/: config.yml  trigger-nightly-build.sh
.github/workflows/: publish.yml  ruff.yml  test.yml
src/wagtail_localize_git/: apps.py  git.py  importer.py  views.py  wagtail_hooks.py
src/wagtail_localize_git/templates/wagtail_localize_git/: dashboard.html
tests/: test_git.py  test_importer.py  test_models.py  test_sync.py  test_views.py  utils.py
tests/testapp/: apps.py  models.py  settings.py
wagtail_localize_git/: __init__.py  apps.py  git.py  importer.py  models.py  sync.py  views.py  wagtail_hooks.py
wagtail_localize_git/migrations/: 0001_initial.py
wagtail_localize_git/test/: __init__.py  apps.py  models.py  settings.py  urls.py
wagtail_localize_git/test/migrations/: 0001_initial.py
wagtail_localize_git/tests/: test_git.py  test_importer.py  test_models.py  test_sync.py  test_views.py  utils.py
wagtail_localize_pontoon/: __init__.py  apps.py  git.py  importer.py  models.py  page_updater.py  pofile.py  sync.py  views.py  wagtail_hooks.py
wagtail_localize_pontoon/management/commands/: submit_whole_site_to_pontoon.py  sync_pontoon.py
wagtail_localize_pontoon/migrations/: 0001_initial.py  0001_squashed_0008_new_models.py  0002_pontoonresourcetranslation.py  0003_synclog.py  0004_pontoonsynclogresource.py  0005_auto_20190923_1405.py  0006_auto_20191007_1700.py  0007_delete.py  0008_new_models.py  0013_remove_old_resource_model.py
wagtail_localize_pontoon/templates/wagtail_localize_pontoon/: dashboard.html
wagtail_localize_pontoon/test/: __init__.py  apps.py  models.py  settings.py
wagtail_localize_pontoon/test/migrations/: 0001_initial.py  0002_auto_20191007_1608.py  0003_delete_testpage.py
wagtail_localize_pontoon/test/tests/: test_auto_submit.py  test_git.py  test_importer.py  test_pofile_generation.py  test_sync.py
